firebase: fix dropdown visibility

--- a/src/app/components/user-list/user-list.component.css
+++ b/src/app/components/user-list/user-list.component.css
@@ -6,3 +6,7 @@
   padding-left: 0!important;
   padding-right: 0!important;
 }
+
+.dropdown {
+  position: static;
+}
